# openmod-2025-benders

./: LICENSE  README.md  openmod_2025_benders_basic.ipynb  openmod_2025_benders_lshaped.ipynb  pyproject.toml
national_scale/: model.yaml
national_scale/model_config/: techs.yaml
